[gd_scene load_steps=4 format=3 uid="uid://cxbsf1nd5ohg6"]

[ext_resource type="Theme" uid="uid://dty3pkach4w70" path="res://Themes/simple_dialog_theme.tres" id="1_m87ef"]
[ext_resource type="Script" path="res://Menus/simple_dialog.gd" id="2_g1iud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r68ag"]
content_margin_left = 50.0
content_margin_top = 30.0
content_margin_right = 50.0
content_margin_bottom = 30.0
bg_color = Color(1, 1, 1, 1)
corner_detail = 20

[node name="SimpleDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m87ef")
script = ExtResource("2_g1iud")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.368627)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r68ag")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="QuestionLabel" type="Label" parent="ColorRect/CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Question?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="ConfirmButton" type="Button" parent="ColorRect/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Yes"

[node name="CancelButton" type="Button" parent="ColorRect/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "No
"

[connection signal="pressed" from="ColorRect/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
